--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -27,7 +27,7 @@
     background: transparent;
     font-size: 16px;
     color: #49557e;
-    border: 1px solid tomato;
+    border: 1px solid #cc7a00;
     padding: 10px 30px;
     border-radius: 50px;
     cursor: pointer;
@@ -40,7 +40,7 @@
 
 .navbar .active{
     padding-bottom: 2px;
-    border-bottom: 2px solid #49557e
+    border-bottom: 2px solid #063920
 }
 
 .navbar li{
@@ -55,7 +55,7 @@
     position: absolute;
     min-width: 10px;
     min-height: 10px;
-    background-color: tomato;
+    background-color: #cc7a00;
     border-radius: 5px;
     top: -8px;
     right: -8px;
