Make the website responsive

--- a/frontend/src/components/fooditem/fooditem.css
+++ b/frontend/src/components/fooditem/fooditem.css
@@ -31,7 +31,7 @@
     color: #676767;
 }
 .food-item-price{
-    color: tomato;
+    color: #cc7a00;
     font-size: 22px;
     font-weight: 500;
     margin: 10px 0px;
