--- a/frontend/src/components/footer/footer.css
+++ b/frontend/src/components/footer/footer.css
@@ -1,6 +1,6 @@
 .footer{
-    color: #d9d9d9;
-    background-color: #323232;
+    color: #e4e2dd;
+    background-color: #764600;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,12 +40,27 @@
     cursor: pointer;
 }
 .footer-content-right h2, .footer-content-center h2{
-   color: #ffffff;
+   color: #e4e2dd;
 }
 .footer hr{
     width: 100%;
     height: 2px;
     margin: 20px 0;
-    background-color: grey;
+    background-color: #7b776f;
     border: none;
+}
+
+@media (max-width: 750px) {
+    .footer-content-left > img:first-of-type {
+        width: 75%;
+    }
+    .footer-content {
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+    }
+
+    .fotter-copyright {
+        text-align: center;
+    }
 }
