--- a/frontend/src/components/fooddisplay/fooddisplay.css
+++ b/frontend/src/components/fooddisplay/fooddisplay.css
@@ -2,8 +2,9 @@
     margin-top: 30px;
 }
 .food-display h2{
-    font-size: max(2vw, 24px);
-    font-weight: 600;
+    font-size: max(2vw, 20px);
+    font-weight: 500;
+    color: #262626;
 }
 .food-display-list{
     display: grid;
