--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -72,7 +72,7 @@
     z-index: 1;
 }
 
-.nav-profile:hover .nav-profile-dropdown{
+.navbar-profile:hover .nav-profile-dropdown{
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -80,7 +80,8 @@
     padding: 12px 25px;
     border-radius: 4px;
     border: 1px solid #cc7a00;
-    outline: 2px solid white;
+    outline: 2px solid #f6ebdc;
+    list-style: none;
 }
 
 .nav-profile-dropdown li{
